--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </a>
             
             <a href="cv-christophe-sokpoly.jpg" target="_blank" class="btn2" download>
-              Download CV
+              Télécharger mon CV
               <i class="ri-download-2-line"></i>
             </a>
           </div>
@@ -156,8 +156,8 @@
 
             <div class="row-in">
               <div class="row-left">
-                <h3>Website Design</h3>
-                <h6>Web Design, App Design</h6>
+                <h3>Site Web</h3>
+                <h6>Edusity</h6>
               </div>
               <div class="row-right">
                 <a href="https://educity-khaki.vercel.app/" target="_blank"><i class="ri-arrow-right-line"></i></a>
@@ -172,8 +172,8 @@
 
             <div class="row-in">
               <div class="row-left">
-                <h3>Website Design</h3>
-                <h6>Web Design, App Design</h6>
+                <h3>Site Web</h3>
+                <h6>Smile With Sham</h6>
               </div>
               <div class="row-right">
                 <a href="https://smile-white-sham-djdj.vercel.app/" target="_blank"><i class="ri-arrow-right-line"></i></a>
@@ -188,8 +188,8 @@
 
             <div class="row-in">
               <div class="row-left">
-                <h3>Website Design</h3>
-                <h6>Web Design, App Design</h6>
+                <h3>Site Web</h3>
+                <h6>Park Seven</h6>
               </div>
               <div class="row-right">
                 <a href="https://rayal-park-seven.vercel.app/" target="_blank"><i class="ri-arrow-right-line"></i></a>
@@ -228,7 +228,7 @@
             <input type="text" placeholder="Votre Nom" required>
             <input type="email" name="" placeholder="Votre adresse e-mail..." required>
             <textarea name="" id="" cols="30" rows="10" placeholder="Écrivez votre message ici..." required></textarea>
-            <input type="submit" value="submit Now" class="submit-btn">
+            <input type="submit" value="Envoyer" class="submit-btn">
           </form>
         </section>
 
