--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <input type="text" placeholder="Votre Nom" required>
             <input type="email" name="" placeholder="Votre adresse e-mail..." required>
             <textarea name="" id="" cols="30" rows="10" placeholder="Écrivez votre message ici..." required></textarea>
-            <input type="submit" value="Envoyer" class="submit-btn">
+            <input type="submit" value="Envoyer" class="submit">
           </form>
         </section>
 
